<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="40sp"
        android:text="0" />
    <EditText
        android:id="@+id/numFirstET"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="num1"/>
    <EditText
        android:id="@+id/numSecondET"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="num2"/>
    <Button
        android:id="@+id/calculateBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="calculate"/>


    <TextView
        android:id="@+id/divResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:textSize="40sp"
        android:text="0" />
    <EditText
        android:id="@+id/divFirstET"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="num1"/>
    <EditText
        android:id="@+id/divSecondET"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="num2"/>
    <Button
        android:id="@+id/divCalculateBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="calculate"/>

</LinearLayout>